--- a/ex4/index.html
+++ b/ex4/index.html
@@ -9,7 +9,7 @@
 <body>
   <button id="btn">КНОПКА</button>
   <script>
-    const button = document.querySelector('XXX');
+    const button = document.querySelector('#btn');
     button.addEventListener('click', () => {
       console.log('click!');
     });
