--- a/ex4/index1.html
+++ b/ex4/index1.html
@@ -19,7 +19,7 @@
       flex-direction: column;
     }
 
-    @media screen XXX (YYY: ZZZpx) {
+    @media screen and (min-width: 1280px) {
       ul {
         flex-direction: row;
       }
